# repairjson

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  benchmark.py  pyproject.toml
.github/workflows/: CI.yml
python/json_repair_rs/: __init__.py  json_repair_rs.cpython-39-darwin.so.stale
python/repairjson/: __init__.py
python/tests/: test_all.py
src/: lexer.rs  lib.rs  parser.rs
