[package]
name = "repairjson"
version = "0.1.1"
edition = "2024"
description = "Rust-backed repair of malformed JSON for LLM-style outputs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "repairjson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["abi3-py38", "extension-module"] }
smallvec = "1.15.1"
